--- a/index.html
+++ b/index.html
@@ -6,13 +6,98 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800;900&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="style.css" />
 		<title>Путешествия по России</title>
 	</head>
 
 	<body>
-		<header></header>
+		<header class="header__wrapper">
+			<img class="header__logo" src="/img/logo.svg" alt="Logo" />
+			<div class="lang">
+				<a href="#" class="header__lang">Ru</a>
+				<a href="#" class="header__lang">En</a>
+			</div>
+		</header>
 
-		<main></main>
+		<main>
+			<section class="lead">
+				<h1 class="title">Путешествия по России</h1>
+				<h3 class="subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
+				<img src="/img/maintravel.png" alt="girl in train" />
+				<p class="lead__udner-text">ваша полка — верхняя</p>
+			</section>
+
+			<section class="intro">
+				<h2 class="intro__title">Чего мы там не видели?</h2>
+				<h3 class="intro__subtitle">Зачем путешествовать по своему дому</h3>
+				<div class="content__row">
+					<div class="intro__text__wrapper">
+						<p class="intro__text">
+							По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в
+							родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым
+							морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без
+							миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая
+							молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров
+							по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+						</p>
+					</div>
+					<div>
+						<p class="intro__text-right__up">Автор текста: <span class="intro__name-date">Имя Фамилия</span></p>
+						<p class="intro__text-right_down">Дата: <span class="intro__name-date">17 ноября 2023</span></p>
+					</div>
+				</div>
+				<div class="intro__info">
+					<p>Часовых поясов <span class="intro__info__numbers">11</span></p>
+					<p>Объектов природного наследия ЮНЕСКО <span class="intro__info__numbers">12</span></p>
+					<p>Объектов культурного наследия ЮНЕСКО <span class="intro__info__numbers">16</span></p>
+					<p>Природных заповедников <span class="intro__info__numbers">105</span></p>
+					<p>Аэропортов <span class="intro__info__numbers">241</span></p>
+				</div>
+			</section>
+
+			<div class="photo__grid">
+				<img src="/img/__item.png" />
+				<img src="/img/__item-1.png" />
+				<img src="/img/__item-2.png" />
+				<img src="/img/__item-3.png" />
+				<img src="/img/__item-4.png" />
+				<img src="/img/__item-5.png" />
+				<img src="/img/__item-6.png" />
+				<img src="/img/__item-7.png" />
+				<img src="/img/__item-8.png" />
+				<img src="/img/__item-9.png" />
+				<img src="/img/__item-10.png" />
+				<img src="/img/__item-11.png" />
+			</div>
+
+			<section class="places">
+				<div class="place">
+					<div class="place__header">
+						<h2 class="places__title">Куршская коса</h2>
+						<div class="place__url-wrapper">
+							<p class="place__url__heading">URL</p>
+							<a href="#" class="place__url">park-kosa.ru</a>
+						</div>
+					</div>
+					<div class="place__info">
+						<img src="/img/__image-4.png" class="place__image" />
+						<div class="place__info-text">
+							<p class="place__info-text-up">
+								Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского
+								залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на
+								краю российского анклава.
+							</p>
+							<p>
+								На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по
+								соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших
+								приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах
+								стального, прохладного моря.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 
 		<footer></footer>
 	</body>
