add: additional section

--- a/index.html
+++ b/index.html
@@ -190,6 +190,66 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="video">
+				<div>
+					<h2 class="video__title-content">В глубины Земли и в дальний космос</h2>
+					<h3 class="video__subtitle-content">
+						Видео от студии Stereotactic о местах в России, где ведутся фундаментальные исследования
+					</h3>
+				</div>
+				<div class="video__content">
+					<div class="video__play">
+						<a href="#" class="video__button"><img src="/img/__icon_play.svg" /></a>
+						<p class="duration">6:30</p>
+						<h2 class="video__title">Colors of Kamchatka</h2>
+						<h3 class="video__subtitle">Director: Pavel Karykhalin</h3>
+						<img src="/img/__item-bg.png" />
+					</div>
+					<div class="video__play">
+						<a href="#" class="video__button"><img src="/img/__icon_play.svg" /></a>
+						<p class="duration">24:45</p>
+						<h2 class="video__title">Обсерватория | Observatory</h2>
+						<h3 class="video__subtitle">Director: Alexander Khudokon</h3>
+						<img src="/img/__item-bg1.png" />
+					</div>
+				</div>
+			</section>
+
+			<section class="additional">
+				<h2 class="additional__title">А также</h2>
+				<h3 class="additional__subtitle">места, рекомендованные нашими фотографами</h3>
+				<div class="additional__row">
+					<div>
+						<h4 class="additional__card-title">Новороссийская бухта</h4>
+						<p class="additional__card-text">
+							Главный торговый порт не курорт, но море здесь лазурное, и толпы кораблей на рейде. Залюбуешься.
+						</p>
+						<img src="/img/novoros__bg.png" />
+					</div>
+					<div>
+						<h4 class="additional__card-title">Аракульский шихан</h4>
+						<p class="additional__card-text">
+							Даже для Южного Урала, где красиво везде, это пейзаж выдающийся. И там отсутствует несносная мошкá.
+						</p>
+						<img src="/img/arakus__bg.png" />
+					</div>
+					<div>
+						<h4 class="additional__card-title">Череповец</h4>
+						<p class="additional__card-text">
+							Громадный металлургический комбинат на водном пути с Волги в Балтийское море. В нём есть своя красота.
+						</p>
+						<img src="/img/chere_bg.png" />
+					</div>
+					<div>
+						<h4 class="additional__card-title">Никола-Ленивец</h4>
+						<p class="additional__card-text">
+							Оцените ответ современных художников идолам капища, которое было тут при древнем поселении на реке Угра.
+						</p>
+						<img src="/img/nikola__bg.png" />
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<footer></footer>
