--- a/index.html
+++ b/index.html
@@ -250,6 +250,42 @@
 					</div>
 				</div>
 			</section>
+
+			<section>
+				<h2 class="comments__title">Фотографы,<br> снимающие Россию</h2>
+				<h3 class="comments__subtitle">
+					Природа и люди вдохновили их работы, удостоенные<br> наград на международных конкурсах
+				</h3>
+				<div class="comments__container">
+					<div class="comment">
+						<img class="comment__ava" src="/img/ava.png" />
+						<br />
+						<blockquote class="quote">
+							«Если вам кажется, что в России ничего не происходит, то просто выгляньте “наружу”…»
+						</blockquote>
+						<p class="quote__author">Виктор Лягушкин</p>
+					</div>
+					<div class="comment">
+						<img class="comment__ava" src="/img/ava1.png" />
+						<br />
+						<blockquote class="quote">
+							«Если в город едут туристы — неважно за чем они туда едут: за шамбалой или фрески Рублева искать, или на
+							родину Тарковского — туристы обеспечивают любой город молодёжью, рабочими местами и в конечном счёте
+							наполняют его жизнью.»
+						</blockquote>
+						<p class="quote__author">Иван Хафизов</p>
+					</div>
+					<div class="comment">
+						<img class="comment__ava" src="/img/ava2.png" />
+						<br />
+						<blockquote class="quote">
+							«Ты приезжаешь, и люди рассказывают тебе, как им плохо. А когда ты покажешь, как им плохо, то ты сволочь и
+							всё очернил.»
+						</blockquote>
+						<p class="quote__author">Сергей Максимишин</p>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<footer></footer>
