add: emblems section fix: emblem img bird

--- a/index.html
+++ b/index.html
@@ -252,9 +252,13 @@
 			</section>
 
 			<section>
-				<h2 class="comments__title">Фотографы,<br> снимающие Россию</h2>
+				<h2 class="comments__title">
+					Фотографы,<br />
+					снимающие Россию
+				</h2>
 				<h3 class="comments__subtitle">
-					Природа и люди вдохновили их работы, удостоенные<br> наград на международных конкурсах
+					Природа и люди вдохновили их работы, удостоенные<br />
+					наград на международных конкурсах
 				</h3>
 				<div class="comments__container">
 					<div class="comment">
@@ -285,6 +289,42 @@
 						<p class="quote__author">Сергей Максимишин</p>
 					</div>
 				</div>
+			</section>
+
+			<div class="cover">
+				<h2 class="cover__title">До Байкала «на собаках»</h2>
+				<h3 class="cover__subtitle">
+					По мотивам учебной темы о Транссибе и<br />
+					iframes — путешествие от столицы до<br />
+					Байкала на электричках.
+				</h3>
+				<img src="/img/cover-bg.png" />
+			</div>
+
+			<section class="emblem__wrapper">
+				<h2 class="emblem__title">Природа на гербах<br>российских<br> городов</h2>
+			<div class="emblem__container">
+				<div>
+					<img src="/img/gerb.png">
+					<p class="emblem__text">Великий<br>Новгород</p>
+				</div>
+				<div>
+					<img src="/img/gerb1.png">
+					<p class="emblem__text">Ростов Великий</p>
+				</div>
+				<div>
+					<img src="/img/gerb2.png">
+					<p class="emblem__text">Тамбов</p>
+				</div>
+				<div>
+					<img src="/img/birdsCityLegends02_.png">
+					<p class="emblem__text">Елабуга</p>
+				</div>
+				<div>
+					<img src="/img/Coat_of_Arms_of_Perm_oblast.png">
+					<p class="emblem__text">Пермь</p>
+				</div>
+			</div>
 			</section>
 		</main>
 
