--- a/index.html
+++ b/index.html
@@ -302,32 +302,63 @@
 			</div>
 
 			<section class="emblem__wrapper">
-				<h2 class="emblem__title">Природа на гербах<br>российских<br> городов</h2>
-			<div class="emblem__container">
-				<div>
-					<img src="/img/gerb.png">
-					<p class="emblem__text">Великий<br>Новгород</p>
+				<h2 class="emblem__title">
+					Природа на гербах<br />российских<br />
+					городов
+				</h2>
+				<div class="emblem__container">
+					<div>
+						<img src="/img/gerb.png" />
+						<p class="emblem__text">Великий<br />Новгород</p>
+					</div>
+					<div>
+						<img src="/img/gerb1.png" />
+						<p class="emblem__text">Ростов Великий</p>
+					</div>
+					<div>
+						<img src="/img/gerb2.png" />
+						<p class="emblem__text">Тамбов</p>
+					</div>
+					<div>
+						<img src="/img/birdsCityLegends02_.png" />
+						<p class="emblem__text">Елабуга</p>
+					</div>
+					<div>
+						<img src="/img/Coat_of_Arms_of_Perm_oblast.png" />
+						<p class="emblem__text">Пермь</p>
+					</div>
 				</div>
-				<div>
-					<img src="/img/gerb1.png">
-					<p class="emblem__text">Ростов Великий</p>
+			</section>
+
+			<section class="barentsburg">
+				<h2 class="barentsburg__title">Баренцбург</h2>
+				<h3 class="barentsburg__subtitle">78.0648° с.ш. 14.2335° в.д.</h3>
+				<img src="/img/__map.png" />
+				<div class="barentsburg__under-container">
+					<p class="barentsburg__text">
+						Арктика и соседство с Норвегией — мало кто знает о жизни самого западного российского посёлка, который
+						находится на Шпицбергене.
+					</p>
+					<div class="barentsburg__website">
+						<p class="barentsburg__url-header">URL</p>
+						<a href="" class="barentsburg__url"
+							>Умереть или родиться здесь<br />
+							практически невозможно</a
+						>
+					</div>
 				</div>
-				<div>
-					<img src="/img/gerb2.png">
-					<p class="emblem__text">Тамбов</p>
-				</div>
-				<div>
-					<img src="/img/birdsCityLegends02_.png">
-					<p class="emblem__text">Елабуга</p>
-				</div>
-				<div>
-					<img src="/img/Coat_of_Arms_of_Perm_oblast.png">
-					<p class="emblem__text">Пермь</p>
-				</div>
-			</div>
 			</section>
 		</main>
 
-		<footer></footer>
+		<footer class="footer">
+			<ul class="footer__links">
+				<li><a class="footer__link" href="#">Карты</a></li>
+				<li><a class="footer__link" href="#">Погода</a></li>
+				<li><a class="footer__link" href="#">Расписание</a></li>
+				<li><a class="footer__link" href="#">Календарь</a></li>
+				<li><a class="footer__link" href="#">Путешествия</a></li>
+			</ul>
+			<p class="footer__copyright">© 2023. Косарев Даниил</p>
+		</footer>
 	</body>
 </html>
