delete: unnecessary class video__play

--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
 					</h3>
 				</div>
 				<div class="video__content">
-					<div class="video__play">
+					<div>
 						<a href="#" class="video__button"><img src="/img/__icon_play.svg" alt="paly button" /></a>
 						<p class="duration">6:30</p>
 						<h2 class="video__title">Colors of Kamchatka</h2>
 						<h3 class="video__subtitle">Director: Pavel Karykhalin</h3>
 						<img src="/img/__item-bg.png" alt="image nature" />
 					</div>
-					<div class="video__play">
+					<div>
 						<a href="#" class="video__button"><img src="/img/__icon_play.svg" alt="paly button" /></a>
 						<p class="duration">24:45</p>
 						<h2 class="video__title">Обсерватория | Observatory</h2>
