fix: incorrect file path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<header class="header__wrapper">
-			<img class="header__logo" src="/img/logo.svg" alt="Logo" />
+			<img class="header__logo" src="img/logo.svg" alt="Logo" />
 			<div class="lang">
 				<a href="#" class="header__lang">Ru</a>
 				<a href="#" class="header__lang">En</a>
@@ -23,7 +23,7 @@
 			<section class="lead">
 				<h1 class="title">Путешествия по России</h1>
 				<h3 class="subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
-				<img src="/img/maintravel.png" alt="girl in train" />
+				<img src="img/maintravel.png" alt="girl in train" />
 				<p class="lead__udner-text">ваша полка — верхняя</p>
 			</section>
 
@@ -56,18 +56,18 @@
 			</section>
 
 			<div class="photo__grid">
-				<img src="/img/__item.png" alt="image nature"  />
-				<img src="/img/__item-1.png" alt="image nature" />
-				<img src="/img/__item-2.png" alt="image nature" />
-				<img src="/img/__item-3.png" alt="image nature" />
-				<img src="/img/__item-4.png" alt="image nature" />
-				<img src="/img/__item-5.png" alt="image nature" />
-				<img src="/img/__item-6.png" alt="image nature" />
-				<img src="/img/__item-7.png" alt="image nature" />
-				<img src="/img/__item-8.png" alt="image nature" />
-				<img src="/img/__item-9.png" alt="image nature" />
-				<img src="/img/__item-10.png" alt="image nature" />
-				<img src="/img/__item-11.png" alt="image nature" />
+				<img src="img/__item.png" alt="image nature" />
+				<img src="img/__item-1.png" alt="image nature" />
+				<img src="img/__item-2.png" alt="image nature" />
+				<img src="img/__item-3.png" alt="image nature" />
+				<img src="img/__item-4.png" alt="image nature" />
+				<img src="img/__item-5.png" alt="image nature" />
+				<img src="img/__item-6.png" alt="image nature" />
+				<img src="img/__item-7.png" alt="image nature" />
+				<img src="img/__item-8.png" alt="image nature" />
+				<img src="img/__item-9.png" alt="image nature" />
+				<img src="img/__item-10.png" alt="image nature" />
+				<img src="img/__item-11.png" alt="image nature" />
 			</div>
 
 			<section class="places">
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 					<div class="place__info">
-						<img src="/img/__image-4.png" class="place__image" alt="image nature" />
+						<img src="img/__image-4.png" class="place__image" alt="image nature" />
 						<div class="place__info-text">
 							<p class="place__info-text-up">
 								Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского
@@ -105,7 +105,7 @@
 						</div>
 					</div>
 					<div class="place__info">
-						<img src="/img/__image-3.png" class="place__image" alt="image nature" />
+						<img src="img/__image-3.png" class="place__image" alt="image nature" />
 						<div class="place__info-text">
 							<p class="place__info-text-up">
 								Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на
@@ -129,7 +129,7 @@
 						</div>
 					</div>
 					<div class="place__info">
-						<img src="/img/__image-2.png" class="place__image" alt="image nature" />
+						<img src="img/__image-2.png" class="place__image" alt="image nature" />
 						<div class="place__info-text">
 							<p class="place__info-text-up">
 								Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы
@@ -153,7 +153,7 @@
 						</div>
 					</div>
 					<div class="place__info">
-						<img src="/img/__image-1.png" class="place__image" alt="image nature" />
+						<img src="img/__image-1.png" class="place__image" alt="image nature" />
 						<div class="place__info-text">
 							<p class="place__info-text-up">
 								Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник
@@ -176,7 +176,7 @@
 						</div>
 					</div>
 					<div class="place__info">
-						<img src="/img/__image.png" class="place__image" alt="image nature" />
+						<img src="img/__image.png" class="place__image" alt="image nature" />
 						<div class="place__info-text">
 							<p class="place__info-text-up">
 								Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
@@ -200,18 +200,18 @@
 				</div>
 				<div class="video__content">
 					<div>
-						<a href="#" class="video__button"><img src="/img/__icon_play.svg" alt="paly button" /></a>
+						<a href="#" class="video__button"><img src="img/__icon_play.svg" alt="paly button" /></a>
 						<p class="duration">6:30</p>
 						<h2 class="video__title">Colors of Kamchatka</h2>
 						<h3 class="video__subtitle">Director: Pavel Karykhalin</h3>
-						<img src="/img/__item-bg.png" alt="image nature" />
+						<img src="img/__item-bg.png" alt="image nature" />
 					</div>
 					<div>
-						<a href="#" class="video__button"><img src="/img/__icon_play.svg" alt="paly button" /></a>
+						<a href="#" class="video__button"><img src="img/__icon_play.svg" alt="paly button" /></a>
 						<p class="duration">24:45</p>
 						<h2 class="video__title">Обсерватория | Observatory</h2>
 						<h3 class="video__subtitle">Director: Alexander Khudokon</h3>
-						<img src="/img/__item-bg1.png" alt="image nature" />
+						<img src="img/__item-bg1.png" alt="image nature" />
 					</div>
 				</div>
 			</section>
@@ -225,28 +225,28 @@
 						<p class="additional__card-text">
 							Главный торговый порт не курорт, но море здесь лазурное, и толпы кораблей на рейде. Залюбуешься.
 						</p>
-						<img src="/img/novoros__bg.png" alt="image nature" />
+						<img src="img/novoros__bg.png" alt="image nature" />
 					</div>
 					<div>
 						<h4 class="additional__card-title">Аракульский шихан</h4>
 						<p class="additional__card-text">
 							Даже для Южного Урала, где красиво везде, это пейзаж выдающийся. И там отсутствует несносная мошкá.
 						</p>
-						<img src="/img/arakus__bg.png" alt="image nature" />
+						<img src="img/arakus__bg.png" alt="image nature" />
 					</div>
 					<div>
 						<h4 class="additional__card-title">Череповец</h4>
 						<p class="additional__card-text">
 							Громадный металлургический комбинат на водном пути с Волги в Балтийское море. В нём есть своя красота.
 						</p>
-						<img src="/img/chere_bg.png" alt="image nature" />
+						<img src="img/chere_bg.png" alt="image nature" />
 					</div>
 					<div>
 						<h4 class="additional__card-title">Никола-Ленивец</h4>
 						<p class="additional__card-text">
 							Оцените ответ современных художников идолам капища, которое было тут при древнем поселении на реке Угра.
 						</p>
-						<img src="/img/nikola__bg.png" alt="image nature" />
+						<img src="img/nikola__bg.png" alt="image nature" />
 					</div>
 				</div>
 			</section>
@@ -262,7 +262,7 @@
 				</h3>
 				<div class="comments__container">
 					<div class="comment">
-						<img class="comment__ava" src="/img/ava.png" alt="people img" />
+						<img class="comment__ava" src="img/ava.png" alt="people img" />
 						<br />
 						<blockquote class="quote">
 							«Если вам кажется, что в России ничего не происходит, то просто выгляньте “наружу”…»
@@ -270,7 +270,7 @@
 						<p class="quote__author">Виктор Лягушкин</p>
 					</div>
 					<div class="comment">
-						<img class="comment__ava" src="/img/ava1.png" alt="people img" />
+						<img class="comment__ava" src="img/ava1.png" alt="people img" />
 						<br />
 						<blockquote class="quote">
 							«Если в город едут туристы — неважно за чем они туда едут: за шамбалой или фрески Рублева искать, или на
@@ -280,7 +280,7 @@
 						<p class="quote__author">Иван Хафизов</p>
 					</div>
 					<div class="comment">
-						<img class="comment__ava" src="/img/ava2.png" alt="people img" />
+						<img class="comment__ava" src="img/ava2.png" alt="people img" />
 						<br />
 						<blockquote class="quote">
 							«Ты приезжаешь, и люди рассказывают тебе, как им плохо. А когда ты покажешь, как им плохо, то ты сволочь и
@@ -298,7 +298,7 @@
 					iframes — путешествие от столицы до<br />
 					Байкала на электричках.
 				</h3>
-				<img src="/img/cover-bg.png" alt="trains" />
+				<img src="img/cover-bg.png" alt="trains" />
 			</div>
 
 			<section class="emblem__wrapper">
@@ -308,23 +308,23 @@
 				</h2>
 				<div class="emblem__container">
 					<div>
-						<img src="/img/gerb.png" alt="emblem" />
+						<img src="img/gerb.png" alt="emblem" />
 						<p class="emblem__text">Великий<br />Новгород</p>
 					</div>
 					<div>
-						<img src="/img/gerb1.png" alt="emblem" />
+						<img src="img/gerb1.png" alt="emblem" />
 						<p class="emblem__text">Ростов Великий</p>
 					</div>
 					<div>
-						<img src="/img/gerb2.png" alt="emblem" />
+						<img src="img/gerb2.png" alt="emblem" />
 						<p class="emblem__text">Тамбов</p>
 					</div>
 					<div>
-						<img src="/img/birdsCityLegends02_.png" alt="emblem" />
+						<img src="img/birdsCityLegends02_.png" alt="emblem" />
 						<p class="emblem__text">Елабуга</p>
 					</div>
 					<div>
-						<img src="/img/Coat_of_Arms_of_Perm_oblast.png" alt="emblem" />
+						<img src="img/Coat_of_Arms_of_Perm_oblast.png" alt="emblem" />
 						<p class="emblem__text">Пермь</p>
 					</div>
 				</div>
@@ -333,7 +333,7 @@
 			<section class="barentsburg">
 				<h2 class="barentsburg__title">Баренцбург</h2>
 				<h3 class="barentsburg__subtitle">78.0648° с.ш. 14.2335° в.д.</h3>
-				<img src="/img/__map.png" alt="map image" />
+				<img src="img/__map.png" alt="map image" />
 				<div class="barentsburg__under-container">
 					<p class="barentsburg__text">
 						Арктика и соседство с Норвегией — мало кто знает о жизни самого западного российского посёлка, который
