fix: incorrect img

--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
 			</section>
 
 			<div class="photo__grid">
-				<img src="img/__item.png" alt="image nature" />
-				<img src="img/__item-1.png" alt="image nature" />
-				<img src="img/__item-2.png" alt="image nature" />
-				<img src="img/__item-3.png" alt="image nature" />
-				<img src="img/__item-4.png" alt="image nature" />
-				<img src="img/__item-5.png" alt="image nature" />
-				<img src="img/__item-6.png" alt="image nature" />
-				<img src="img/__item-7.png" alt="image nature" />
-				<img src="img/__item-8.png" alt="image nature" />
-				<img src="img/__item-9.png" alt="image nature" />
-				<img src="img/__item-10.png" alt="image nature" />
-				<img src="img/__item-11.png" alt="image nature" />
+				<img src="img/item.png" alt="image nature" />
+				<img src="img/item-1.png" alt="image nature" />
+				<img src="img/item-2.png" alt="image nature" />
+				<img src="img/item-3.png" alt="image nature" />
+				<img src="img/item-4.png" alt="image nature" />
+				<img src="img/item-5.png" alt="image nature" />
+				<img src="img/item-6.png" alt="image nature" />
+				<img src="img/item-7.png" alt="image nature" />
+				<img src="img/item-8.png" alt="image nature" />
+				<img src="img/item-9.png" alt="image nature" />
+				<img src="img/item-10.png" alt="image nature" />
+				<img src="img/item-11.png" alt="image nature" />
 			</div>
 
 			<section class="places">
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 					<div class="place__info">
-						<img src="img/__image-4.png" class="place__image" alt="image nature" />
+						<img src="img/image-4.png" class="place__image" alt="image nature" />
 						<div class="place__info-text">
 							<p class="place__info-text-up">
 								Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского
@@ -105,7 +105,7 @@
 						</div>
 					</div>
 					<div class="place__info">
-						<img src="img/__image-3.png" class="place__image" alt="image nature" />
+						<img src="img/image-3.png" class="place__image" alt="image nature" />
 						<div class="place__info-text">
 							<p class="place__info-text-up">
 								Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на
@@ -129,7 +129,7 @@
 						</div>
 					</div>
 					<div class="place__info">
-						<img src="img/__image-2.png" class="place__image" alt="image nature" />
+						<img src="img/image-2.png" class="place__image" alt="image nature" />
 						<div class="place__info-text">
 							<p class="place__info-text-up">
 								Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы
@@ -153,7 +153,7 @@
 						</div>
 					</div>
 					<div class="place__info">
-						<img src="img/__image-1.png" class="place__image" alt="image nature" />
+						<img src="img/image-1.png" class="place__image" alt="image nature" />
 						<div class="place__info-text">
 							<p class="place__info-text-up">
 								Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник
@@ -176,7 +176,7 @@
 						</div>
 					</div>
 					<div class="place__info">
-						<img src="img/__image.png" class="place__image" alt="image nature" />
+						<img src="img/image.png" class="place__image" alt="image nature" />
 						<div class="place__info-text">
 							<p class="place__info-text-up">
 								Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
@@ -200,18 +200,18 @@
 				</div>
 				<div class="video__content">
 					<div>
-						<a href="#" class="video__button"><img src="img/__icon_play.svg" alt="paly button" /></a>
+						<a href="#" class="video__button"><img src="img/icon_play.svg" alt="paly button" /></a>
 						<p class="duration">6:30</p>
 						<h2 class="video__title">Colors of Kamchatka</h2>
 						<h3 class="video__subtitle">Director: Pavel Karykhalin</h3>
-						<img src="img/__item-bg.png" alt="image nature" />
+						<img src="img/item-bg.png" alt="image nature" />
 					</div>
 					<div>
-						<a href="#" class="video__button"><img src="img/__icon_play.svg" alt="paly button" /></a>
+						<a href="#" class="video__button"><img src="img/icon_play.svg" alt="paly button" /></a>
 						<p class="duration">24:45</p>
 						<h2 class="video__title">Обсерватория | Observatory</h2>
 						<h3 class="video__subtitle">Director: Alexander Khudokon</h3>
-						<img src="img/__item-bg1.png" alt="image nature" />
+						<img src="img/item-bg1.png" alt="image nature" />
 					</div>
 				</div>
 			</section>
