--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 			<section class="barentsburg">
 				<h2 class="barentsburg__title">Баренцбург</h2>
 				<h3 class="barentsburg__subtitle">78.0648° с.ш. 14.2335° в.д.</h3>
-				<img src="img/__map.png" alt="map image" />
+				<img src="img/map.png" alt="map image" />
 				<div class="barentsburg__under-container">
 					<p class="barentsburg__text">
 						Арктика и соседство с Норвегией — мало кто знает о жизни самого западного российского посёлка, который
