--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 				<li><a class="footer__link" href="#">Календарь</a></li>
 				<li><a class="footer__link" href="#">Путешествия</a></li>
 			</ul>
-			<p class="footer__copyright">© 2023. Косарев Даниил</p>
+			<p class="footer__copyright">© 2023. Kosarev Daniil</p>
 		</footer>
 	</body>
 </html>
