add: adaptiver 1024 and few classes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<section class="lead">
 				<h1 class="title">Путешествия по России</h1>
 				<h3 class="subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
-				<img src="img/maintravel.png" alt="girl in train" />
+				<img class="img__girl-in-train" src="img/maintravel.png" alt="girl in train" />
 				<p class="lead__udner-text">ваша полка — верхняя</p>
 			</section>
 
@@ -204,14 +204,14 @@
 						<p class="duration">6:30</p>
 						<h2 class="video__title">Colors of Kamchatka</h2>
 						<h3 class="video__subtitle">Director: Pavel Karykhalin</h3>
-						<img src="img/item-bg.png" alt="image nature" />
+						<img class="video__player-img" src="img/item-bg.png" alt="image nature" />
 					</div>
 					<div>
 						<a href="#" class="video__button"><img src="img/icon_play.svg" alt="paly button" /></a>
 						<p class="duration">24:45</p>
 						<h2 class="video__title">Обсерватория | Observatory</h2>
 						<h3 class="video__subtitle">Director: Alexander Khudokon</h3>
-						<img src="img/item-bg1.png" alt="image nature" />
+						<img class="video__player-img" src="img/item-bg1.png" alt="image nature" />
 					</div>
 				</div>
 			</section>
@@ -225,28 +225,28 @@
 						<p class="additional__card-text">
 							Главный торговый порт не курорт, но море здесь лазурное, и толпы кораблей на рейде. Залюбуешься.
 						</p>
-						<img src="img/novoros__bg.png" alt="image nature" />
+						<img class="additional__img" src="img/novoros__bg.png" alt="image nature" />
 					</div>
 					<div>
 						<h4 class="additional__card-title">Аракульский шихан</h4>
 						<p class="additional__card-text">
 							Даже для Южного Урала, где красиво везде, это пейзаж выдающийся. И там отсутствует несносная мошкá.
 						</p>
-						<img src="img/arakus__bg.png" alt="image nature" />
+						<img class="additional__img" src="img/arakus__bg.png" alt="image nature" />
 					</div>
 					<div>
 						<h4 class="additional__card-title">Череповец</h4>
 						<p class="additional__card-text">
 							Громадный металлургический комбинат на водном пути с Волги в Балтийское море. В нём есть своя красота.
 						</p>
-						<img src="img/chere_bg.png" alt="image nature" />
+						<img class="additional__img" src="img/chere_bg.png" alt="image nature" />
 					</div>
 					<div>
 						<h4 class="additional__card-title">Никола-Ленивец</h4>
 						<p class="additional__card-text">
 							Оцените ответ современных художников идолам капища, которое было тут при древнем поселении на реке Угра.
 						</p>
-						<img src="img/nikola__bg.png" alt="image nature" />
+						<img class="additional__img" src="img/nikola__bg.png" alt="image nature" />
 					</div>
 				</div>
 			</section>
@@ -298,7 +298,7 @@
 					iframes — путешествие от столицы до<br />
 					Байкала на электричках.
 				</h3>
-				<img src="img/cover-bg.png" alt="trains" />
+				<img class="img__to-Baikal" src="img/cover-bg.png" alt="trains" />
 			</div>
 
 			<section class="emblem__wrapper">
@@ -308,23 +308,23 @@
 				</h2>
 				<div class="emblem__container">
 					<div>
-						<img src="img/gerb.png" alt="emblem" />
+						<img class="emblem__img" src="img/gerb.png" alt="emblem" />
 						<p class="emblem__text">Великий<br />Новгород</p>
 					</div>
 					<div>
-						<img src="img/gerb1.png" alt="emblem" />
+						<img class="emblem__img" src="img/gerb1.png" alt="emblem" />
 						<p class="emblem__text">Ростов Великий</p>
 					</div>
 					<div>
-						<img src="img/gerb2.png" alt="emblem" />
+						<img class="emblem__img" src="img/gerb2.png" alt="emblem" />
 						<p class="emblem__text">Тамбов</p>
 					</div>
 					<div>
-						<img src="img/birdsCityLegends02_.png" alt="emblem" />
+						<img class="emblem__img" src="img/birdsCityLegends02_.png" alt="emblem" />
 						<p class="emblem__text">Елабуга</p>
 					</div>
 					<div>
-						<img src="img/Coat_of_Arms_of_Perm_oblast.png" alt="emblem" />
+						<img class="emblem__img" src="img/Coat_of_Arms_of_Perm_oblast.png" alt="emblem" />
 						<p class="emblem__text">Пермь</p>
 					</div>
 				</div>
@@ -333,7 +333,7 @@
 			<section class="barentsburg">
 				<h2 class="barentsburg__title">Баренцбург</h2>
 				<h3 class="barentsburg__subtitle">78.0648° с.ш. 14.2335° в.д.</h3>
-				<img src="img/map.png" alt="map image" />
+				<img class="map" src="img/map.png" alt="map image" />
 				<div class="barentsburg__under-container">
 					<p class="barentsburg__text">
 						Арктика и соседство с Норвегией — мало кто знает о жизни самого западного российского посёлка, который
