add: adaptive 1024px and new classes for img grid

--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
 			</section>
 
 			<div class="photo__grid">
-				<img src="img/item.png" alt="image nature" />
-				<img src="img/item-1.png" alt="image nature" />
-				<img src="img/item-2.png" alt="image nature" />
-				<img src="img/item-3.png" alt="image nature" />
-				<img src="img/item-4.png" alt="image nature" />
-				<img src="img/item-5.png" alt="image nature" />
-				<img src="img/item-6.png" alt="image nature" />
-				<img src="img/item-7.png" alt="image nature" />
-				<img src="img/item-8.png" alt="image nature" />
-				<img src="img/item-9.png" alt="image nature" />
-				<img src="img/item-10.png" alt="image nature" />
-				<img src="img/item-11.png" alt="image nature" />
+				<img class="grid__img" src="img/item.png" alt="image nature" />
+				<img class="grid__img" src="img/item-1.png" alt="image nature" />
+				<img class="grid__img" src="img/item-2.png" alt="image nature" />
+				<img class="grid__img" src="img/item-3.png" alt="image nature" />
+				<img class="grid__img" src="img/item-4.png" alt="image nature" />
+				<img class="grid__img" src="img/item-5.png" alt="image nature" />
+				<img class="grid__img" src="img/item-6.png" alt="image nature" />
+				<img class="grid__img" src="img/item-7.png" alt="image nature" />
+				<img class="grid__img" src="img/item-8.png" alt="image nature" />
+				<img class="grid__img" src="img/item-9.png" alt="image nature" />
+				<img class="grid__img" src="img/item-10.png" alt="image nature" />
+				<img class="grid__img" src="img/item-11.png" alt="image nature" />
 			</div>
 
 			<section class="places">
