--- a/index.html
+++ b/index.html
@@ -303,8 +303,7 @@
 
 			<section class="emblem__wrapper">
 				<h2 class="emblem__title">
-					Природа на гербах<br />российских<br />
-					городов
+					Природа на гербах российских городов
 				</h2>
 				<div class="emblem__container">
 					<div>
